# qlazy

./: .gitignore  CHANGELOG.md  CMakeLists.txt  ChangeLog  LICENSE  MANIFEST.in  README.md  setup.py  setup_gpu.py
c/: CMakeLists.txt  Makefile  README.md  bloch.c  cimage.c  densop.c  densop_bk200312.c  gbank.c  help.c  init.c  line.c  mdata.c  message.c  misc.c  observable.c  qcirc.c  qgate.c  qlazy.c  qlazy.h  qstate.c  qsystem.c  spro.c  stabilizer.c
doc/: Tutorial.md  Tutorial_c.md  Tutorial_en.md  Tutorial_jp.md  Tutorial_py.md
doc/c/: Tutorial_c.md
doc/en/c/: Tutorial_en_c.md
doc/en/py/: Tutorial_en_py.md
doc/jp/c/: Tutorial_jp_c.md
doc/jp/py/: Tutorial_jp_py.md
doc/py/: Tutorial_py.md
doc/py/usage/: basic.md  densop.md  mpstate.md  observable.md  qcirc.md  qcomp.md  qstate.md  stabilizer.md  tools.md
example/: test.sh
example/c/: bloch_1.qc  bloch_2.qc  control.qc  entangle.qc  fredkin.qc  hadamard.qc  half_adder1.qc  half_adder2.qc  measurement1.qc  measurement2.qc  measurement3.qc  measurement4.qc  measurement5.qc  pauli.qc  performance.qc  phase_shift.qc  reset.qc  rotation.qc  rotation_u1_u2_u3.qc  show_some_qubits.qc  swap.qc  test.sh  toffoli.qc
example/py/: apply_matrix.py  chsh_inequality.py  clone.py  composite.py  controlled_unitary.py  densop_gate_operation.py  densop_tenspro.py  entangle.py  fidelity.py  fredkin.py  hadamard_test_0.py  hadamard_test_1.py  hadamard_test_2.py  hoge.py  larmor_precession_0.py  larmor_precession_1.py  larmor_precession_2.py  mcx.py  measure_spin_any_direction.py  measurement1.py  measurement2.py  measurement_0.py  measurement_1.py  observable.py  one_way_qc_0.py  one_way_qc_1.py  one_way_qc_2.py  one_way_qc_3.py  pea.py  phase_shift.py  qft.py  qstate_test.py  quantum_teleportation1.py  quantum_teleportation2.py  quantum_teleportation_0.py  quantum_teleportation_1.py  rotation.py  rotation_cu1_cu2_cu3.py  rotation_u1_2_3.py  rotation_u1_u2_u3.py  (+6 more)
example/py/Arithmetic/: ctr_modular_multiplier_0.py  ctr_modular_multiplier_1.py  modular_adder_0.py  modular_adder_1.py  modular_exponentiation.py  plain_adder_0.py  plain_adder_1.py
example/py/CHSHInequality/: chsh_inequality.py
example/py/DataCompression/: schumacher.py  shannon.py
example/py/DensityOperator/: densop.py
example/py/DeutschJozsa/: deutsch_jozsa_balanced.py  deutsch_jozsa_constant.py
example/py/PEA/: pea.py
py/: README.md  setup.py
py/qlazypy/: Backend.py  DensOp.py  MData.py  Observable.py  QComp.py  QState.py  QStateTest.py  Stabilizer.py  __init__.py  basic.py  command.py  config.py  error.py  run_qlazy.py  util.py
py/tests/: test.sh  test_DensOp.py  test_QComp.py  test_QComp_ibmq_qasm_simulator.py  test_QComp_qlazy_qstate_simulator.py  test_QComp_qlazy_stabilizer_simulator.py  test_QComp_qulacs_cpu_simulator.py  test_QComp_qulacs_simulator.py  test_QState.py  test_Register.py  test_Stabilizer.py
qlazy/: Backend.py  CMem.py  DensOp.py  MData.py  MPState.py  Observable.py  ObservableBase.py  ParametricQCirc.py  PauliProduct.py  QCirc.py  QCircBase.py  QComp.py  QObject.py  QState.py  QuantumObject.py  Result.py  Stabilizer.py  UnitaryOperator.py  __init__.py  config.py  core.py  error.py  gpu.py  util.py
qlazy/backend/: amazon_braket.py  aws.py  ibmq.py  qlazy_mps_simulator.py  qlazy_qstate_simulator.py  qlazy_stabilizer_simulator.py  qulacs_cpu_simulator.py  qulacs_gpu_simulator.py  qulacs_simulator.py
qlazy/lib/: cmem_c.py  densop_c.py  densop_func.py  densop_mcx.py  gpu_c.py  mdata_c.py  mpstate_func.py  observable_base_c.py  observable_c.py  qcirc_base_c.py  qcirc_c.py  qstate_c.py  qstate_mcx.py  stabilizer_c.py
qlazy/lib/c/: CMakeLists.txt  MT.h  Makefile  README.md  cmem.c  densop.c  gbank.c  gpu.cu  hashtable.c  help.c  init.c  mdata.c  message.c  misc.c  observable.c  observable_base.c  qc.c  qcirc.c  qcirc_base.c  qg.c  qgate.c  qlazy.c  qlazy.h  qstate.c  qstate_gpu.cu  qsystem.c  random.c  spro.c  stabilizer.c  tagtable.c  version.h
qlazy/tools/: Probability.py  Register.py
tests/: test.sh  test_Backend_aws.py  test_Backend_braket.py  test_Backend_ibmq.py  test_Backend_ibmq_aer_simulator.py  test_Backend_ibmq_qasm_simulator.py  test_Backend_qlazy_mpstate_simulator.py  test_Backend_qlazy_qstate_simulator.py  test_Backend_qlazy_stabilizer_simulator.py  test_Backend_qulacs_cpu_simulator.py  test_DensOp.py  test_MPState.py  test_Observable.py  test_ParametricQCirc.py  test_PauliProduct.py  test_QCirc.py  test_QComp_ibmq_qasm_simulator.py  test_QComp_qlazy_qstate_simulator.py  test_QComp_qlazy_stabilizer_simulator.py  test_QComp_qulacs_cpu_simulator.py  test_QState.py  test_Register.py  test_Result.py  test_Stabilizer.py
tests/amazon_braket/: braket_test.py
tests/gpu/: test_Backend_qlazy_qstate_gpu_simulator.py  test_Backend_qulacs_gpu_simulator.py  test_QComp_qulacs_gpu_simulator.py  test_QStateGpu.py
tests/real_qc/: real_qc.py
(+98 files in other folders)
